--- a/shop/templates/shop/aboutUs.html
+++ b/shop/templates/shop/aboutUs.html
@@ -10,11 +10,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-3">My Mart!</h1>
-      <p>MyMart is an Indian e-commerce company based in Lucknow, Uttar Pradesh, India. It was founded by Madhav Rastogi in 2020. The company initially focused on book sales, before expanding into other product categories such as consumer electronics, fashion, home essentials & groceries, and lifestyle products.
-
-The service competes primarily with Amazon's Indian subsidiary, and the domestic rival Snapdeal.[5][6] As of March 2017, Flipkart held a 39.5% market share of India's e-commerce industry.[7] Flipkart is significantly dominant in the sale of apparel (a position that was bolstered by its acquisition of Myntra), and was described as being "neck and neck" with Amazon in the sale of electronics and mobile phones.[8] Flipkart also owns PhonePe, a mobile payments service based on the Unified Payments Interface (UPI).
-
-In August 2020, U.S.-based retail chain Walmart acquired a 77% controlling stake in MyMart for US$16 billion, valuing it at $20 billion.[9</p>
+      <p>MyMart is an Indian e-commerce company based in Lucknow, Uttar Pradesh, India. It was founded by Madhav Rastogi in 2020.</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
     </div>
   </div>
